# mapky-app-specs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: common.rs  constants.rs  lib.rs  traits.rs  utils.rs  validation.rs  wasm.rs
src/models/: collection.rs  geo_capture.rs  incident.rs  location_tag.rs  mod.rs  osm_ref.rs  post.rs  review.rs  route.rs  sequence.rs
