[package]
name = "mapky-app-specs"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Mapky Data Model Specifications — decentralized social layer over OpenStreetMap on Pubky"
homepage = "https://mapky.app"
repository = "https://github.com/gillohner/mapky-app-specs"
documentation = "https://docs.rs/mapky-app-specs"
readme = "README.md"
license = "MIT"
keywords = ["pubky", "openstreetmap", "geospatial", "decentralized", "social"]
categories = ["data-structures", "wasm"]
exclude = [
    ".github",
    "pkg",
    "test",
    "build.sh",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pubky-app-specs = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base32 = "0.5"
blake3 = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pubky = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
